fix dark mode

--- a/src/Pages/darkSupport.css
+++ b/src/Pages/darkSupport.css
@@ -1,18 +1,18 @@
 @media (prefers-color-scheme:dark) {
     body, div {
-        background-color: #222 !important;
-        color: #fff !important;
+        background-color: #222;
+        color: #fff;
     }
     .weui-panel__hd {
-        background-color: #222 !important;
-        color: #fff !important;
+        background-color: #222;
+        color: #fff;
     }
     .weui-panel__bd {
-        background-color: #222 !important;
-        color: #fff !important;
+        background-color: #222;
+        color: #fff;
     }
     .weui-grid__label {
-        background-color: #222 !important;
+        background-color: #222;
         color: #fff !important;
     }
 }
